--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -13,7 +13,7 @@ ADD_EXECUTABLE(${EXAMPLE_TARGET} ${EXAMPLE_SOURCES})
 
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
 
-TARGET_LINK_LIBRARIES(${EXAMPLE_TARGET} ${PROJECT_NAME} pthread)
+TARGET_LINK_LIBRARIES(${EXAMPLE_TARGET} ${PROJECT_NAME} pthread log4cplus)
 
 SET_TARGET_PROPERTIES(${EXAMPLE_TARGET} PROPERTIES OUTPUT_NAME ${EXAMPLE_BINARY})
 
